--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="Todo">
+<html ng-app="Todo">
 <head>
   <meta charset="UTF-8">
   <title>Todo App</title>
@@ -15,9 +15,9 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script><!-- load jquery -->
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js"></script><!-- load angular -->
     <!-- Angular Custom -->
-    <script src="app.js"></script>
-    <script src="js/services/TodoServices.js"></script>
+    <script src="js/app.js"></script>
     <script src="js/controllers/MainController.js"></script>
+    <script src="js/services/TodoService.js"></script>
 
 </head>
 <body ng-controller="MainController">
